--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/classnames": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.47.0"
+    "eslint": "^8.47.0",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
